working for API

--- a/CRUD-WebApi/appsettings.Development.json
+++ b/CRUD-WebApi/appsettings.Development.json
@@ -4,6 +4,12 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+
+      "DbConnection": "Data source=DESKTOP-23V7KHU;Initial Catalog=SanthoshkumarAPI;User id=sa;password=Anaiyaan@123;"
+
     }
+
   }
-}
